# RootlyIncidentMCPServer

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
rootly_incidents/: mcp_server.py
