[project]
name = "rootly-incidents"
version = "0.1.0"
description = "MCP server to fetch rootly incidents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Jeba Singh Emmanuel", email = "jeba.emmanuel@rootly.com"}
]
keywords = ["rootly", "incidents", "mcp", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = {text = "GNU Affero General Public License v3"}
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]
